<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_vg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_corner"
            android:layout_alignParentEnd="true" />
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_clear"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/close" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/poche_img_dialog"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/img_desc"
                android:paddingVertical="5dp"
                app:srcCompat="@drawable/_1_bulbasaur"
                android:elevation="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/txttite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/founded"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="Bulbasaur"
                android:textColor="@color/black"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/btn_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/black"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_dex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokedex"
                    android:backgroundTint="@color/black"
                    android:layout_marginStart="24dp"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>