<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowData"
    android:background="@drawable/pokedex_background">

    <ScrollView
        android:id="@+id/data_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8C8B8B">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/back_desc"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/poche_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Bulbasaur"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="48sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back_button"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/poche_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/img_desc"
                android:paddingVertical="5dp"
                app:srcCompat="@drawable/_1_bulbasaur" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:fadingEdge="vertical">

                <TextView
                    android:id="@+id/weak_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/weak_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/weight"
                    app:layout_constraintStart_toStartOf="@+id/weight"
                    app:layout_constraintTop_toBottomOf="@+id/weight" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:text="190.0 kg"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/weight_title"
                    app:layout_constraintStart_toStartOf="@+id/weight_title"
                    app:layout_constraintTop_toBottomOf="@+id/weight_title" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:text="0,7 m"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/height_title"
                    app:layout_constraintStart_toStartOf="@+id/height_title"
                    app:layout_constraintTop_toBottomOf="@+id/height_title" />

                <TextView
                    android:id="@+id/weight_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="80dp"
                    android:text="@string/weight_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc" />

                <TextView
                    android:id="@+id/height_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/height_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc" />

                <TextView
                    android:id="@+id/desc_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:text="There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger."
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc_title" />

                <TextView
                    android:id="@+id/type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/type_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/height"
                    app:layout_constraintStart_toStartOf="@+id/height"
                    app:layout_constraintTop_toBottomOf="@+id/height" />

                <LinearLayout
                    android:id="@+id/weak_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/weak_title"
                    app:layout_constraintStart_toStartOf="@+id/weak_title"
                    app:layout_constraintTop_toBottomOf="@+id/weak_title" />

                <LinearLayout
                    android:id="@+id/type_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/type_title"
                    app:layout_constraintStart_toStartOf="@+id/type_title"
                    app:layout_constraintTop_toBottomOf="@+id/type_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp">

                <LinearLayout
                    android:id="@+id/evo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/evo1"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/img_desc" />

                    <ImageView
                        android:id="@+id/arrow1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/evo2"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/img_desc" />

                    <ImageView
                        android:id="@+id/arrow2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/evo3"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/img_desc" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>